[gd_scene load_steps=5 format=3 uid="uid://bkra2j87guvs8"]

[ext_resource type="Script" path="res://ui/pause_menu.gd" id="1_w331r"]
[ext_resource type="Theme" uid="uid://c3po0i6ycn4eb" path="res://ui/main_theme.tres" id="2_71ed8"]

[sub_resource type="Gradient" id="Gradient_um41f"]
colors = PackedColorArray(0.243137, 0.152941, 0.192157, 1, 0.0941176, 0.0784314, 0.145098, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ijal0"]
gradient = SubResource("Gradient_um41f")
width = 25

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w331r")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_ijal0")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.5
offset_top = -120.0
offset_right = 109.5
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_71ed8")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PauseLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Pause"
horizontal_alignment = 1

[node name="Continue" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Continue"

[node name="MainMenu" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Main Menu"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Continue" to="." method="_unpause"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
